// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout element produces output containing children horizontal 1`] = `
<div
  className="MuiStack-root css-2oo4uo-MuiStack-root"
  id="app.page1.things"
>
  <p
    className="MuiTypography-root MuiTypography-body1 css-vybajm-MuiTypography-root"
    id="app.page1.things.text1"
  >
    First text
  </p>
  <p
    className="MuiTypography-root MuiTypography-body1 css-110he2w-MuiTypography-root"
    id="app.page1.things.text2"
  >
    Second text
  </p>
</div>
`;

exports[`Layout element produces output containing children horizontal and wrapped with styles 1`] = `
<div
  className="MuiStack-root css-140cui-MuiStack-root"
  id="app.page1.things"
>
  <p
    className="MuiTypography-root MuiTypography-body1 css-vybajm-MuiTypography-root"
    id="app.page1.things.text1"
  >
    First text
  </p>
  <p
    className="MuiTypography-root MuiTypography-body1 css-110he2w-MuiTypography-root"
    id="app.page1.things.text2"
  >
    Second text
  </p>
</div>
`;

exports[`Layout element produces output containing children vertical 1`] = `
<div
  className="MuiStack-root css-1pw6n3e-MuiStack-root"
  id="app.page1.things"
>
  <p
    className="MuiTypography-root MuiTypography-body1 css-vybajm-MuiTypography-root"
    id="app.page1.things.text1"
  >
    First text
  </p>
  <p
    className="MuiTypography-root MuiTypography-body1 css-110he2w-MuiTypography-root"
    id="app.page1.things.text2"
  >
    Second text
  </p>
</div>
`;
